SERVER-45300 mongokerberos should not fail if KRB5_CONFIG is unset

GitOrigin-RevId: fd238f535e624ff7a6819c259618899e85764a40